<resources>
    <string name="app_name">CalculatorDEMO</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Action Settings</string>
    <string name="weightLBL">Enter the weight of /nyour package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost</string>
    <string name="addCostLBL">Added Cost</string>
    <string name="totalLBL">Total Shipping</string>
    <string name="zeroDEC">$0.00</string>
    <string name="zero">zero</string>

</resources>