<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android*"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/shippingbck"
    tools:context=".MyActivity">

    <!--Weight Input Section-->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/weightLBL"
        amdroid:textAppearance="?android:attr/textAppearanceLarge"
        amdroid:gravity="center_horizontal"
         />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="35ap"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            <requestFocus/>


    <!-- </EditText>-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/ouncesLBL"
        amdroid:textAppearance="?android:attr/textAppearanceSmall"
        amdroid:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="40dp"
        android:paddingLeft="dimen/output_margin_buffer"
        amdroid:textAppearance="?android:attr/textAppearanceMedium"
        amdroid:text="@string/baseLBL"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:paddingRight="dimen/output_margin_buffer"
        amdroid:textAppearance="?android:attr/textAppearanceMedium"
        amdroid:text="@string/zeroDec"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:paddingLeft="dimen/output_margin_buffer"
        amdroid:textAppearance="?android:attr/textAppearanceMedium"
        amdroid:text="@string/zeroDec"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:paddingLeft="dimen/output_margin_buffer"
        amdroid:textAppearance="?android:attr/textAppearanceMedium"
        amdroid:text="@string/zeroDec"
        />

    <!--Textview for the total cost label and computation-->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:paddingLeft="dimen/output_margin_buffer"
        amdroid:textAppearance="?android:attr/textAppearanceMedium"
        amdroid:text="@string/totalLBL"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        amdroid:textAppearance="?android:attr/textAppearanceMedium"
        amdroid:text="@string/zeroDec"
        />








</RelativeLayout>








